--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,16 @@ button{
     padding: 40px 40px;
     border-radius: 40px;
     position: absolute;
+    top: 57%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+}
+
+#title{
+    color:black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
