--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
+body{
+    background-color: lightgray;
+}
+
 button{
     background-color: black;
     border:none;
-    padding: 40px 40px;
-    border-radius: 40px;
+    padding: 5% 5%;
+    border-radius: 70px;
     position: absolute;
-    top: 57%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     color: white;
@@ -13,7 +17,7 @@ button{
 #title{
     color:black;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%,-50%);
 }
