--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,9 @@ body{
 button{
     background-color: black;
     border:none;
-    padding: 5% 5%;
-    border-radius: 70px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -18,6 +19,15 @@ button{
     color:black;
     position: absolute;
     top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.center{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 45%;
     left: 50%;
     transform: translate(-50%,-50%);
 }
